@@ -17,26 +17,29 @@
 
 package org.apache.oodt.cas.filemgr.browser.controller;
 
+import org.apache.oodt.cas.filemgr.browser.view.menus.RightClickMenu;
+import org.apache.oodt.cas.filemgr.browser.view.panels.HeaderCell;
+import org.apache.oodt.cas.filemgr.browser.view.panels.HeaderSpacer;
+import org.apache.oodt.cas.filemgr.browser.view.panels.Row;
+import org.apache.oodt.cas.filemgr.browser.view.panels.TablePane;
+import org.apache.poi.hssf.usermodel.HSSFRow;
+import org.apache.poi.hssf.usermodel.HSSFSheet;
+import org.apache.poi.hssf.usermodel.HSSFWorkbook;
+
 import java.awt.Component;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.io.FileOutputStream;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import javax.swing.JFileChooser;
 
-import org.apache.poi.hssf.usermodel.HSSFRow;
-import org.apache.poi.hssf.usermodel.HSSFSheet;
-import org.apache.poi.hssf.usermodel.HSSFWorkbook;
-
-import org.apache.oodt.cas.filemgr.browser.view.menus.RightClickMenu;
-import org.apache.oodt.cas.filemgr.browser.view.panels.HeaderCell;
-import org.apache.oodt.cas.filemgr.browser.view.panels.HeaderSpacer;
-import org.apache.oodt.cas.filemgr.browser.view.panels.Row;
-import org.apache.oodt.cas.filemgr.browser.view.panels.TablePane;
-
 public class TableListener implements MouseListener, ActionListener {
+
+  private static Logger LOG = Logger.getLogger(TableListener.class.getName());
 
   private Component caller;
   private TablePane table;
@@ -70,7 +73,7 @@ public class TableListener implements MouseListener, ActionListener {
       if (caller instanceof HeaderSpacer) {
         HeaderSpacer hsCaller = (HeaderSpacer) caller;
         if (e.getModifiers() == 18
-            && table.hiddenCols.contains(new Integer(hsCaller.getColNum() + 1))) {
+            && table.hiddenCols.contains(Integer.valueOf(hsCaller.getColNum() + 1))) {
           rcMenu.setUnhideMode();
           rcMenu.show(caller, e.getX(), e.getY());
 
@@ -111,7 +114,7 @@ public class TableListener implements MouseListener, ActionListener {
       }
     } else if (arg0.getActionCommand().equals("Unhide Columns")) {
       while (!table.hiddenCols.isEmpty()) {
-        table.unhideColumn((table.hiddenCols.firstElement()).intValue());
+        table.unhideColumn(table.hiddenCols.firstElement());
       }
     } else if (arg0.getActionCommand().equals("Export Table")) {
 
@@ -121,8 +124,9 @@ public class TableListener implements MouseListener, ActionListener {
 
         // write out excel file
         String fullFileName = (fc.getSelectedFile()).getAbsolutePath();
-        if (!fullFileName.endsWith(".xls"))
+        if (!fullFileName.endsWith(".xls")) {
           fullFileName += ".xls";
+        }
 
         HSSFWorkbook wb = new HSSFWorkbook();
         HSSFSheet sheet = wb.createSheet("results");
@@ -130,7 +134,7 @@ public class TableListener implements MouseListener, ActionListener {
 
         int i = 0;
         for (int j = 0; j < table.getRow(0).getComponentCount(); j++) {
-          if (!table.hiddenCols.contains(new Integer(j))) {
+          if (!table.hiddenCols.contains(Integer.valueOf(j))) {
             headerRow.createCell((short) i).setCellValue(
                 table.header.getText(j));
             i++;
@@ -141,7 +145,7 @@ public class TableListener implements MouseListener, ActionListener {
           HSSFRow row = sheet.createRow((short) k + 1);
           i = 0;
           for (int j = 0; j < table.getRow(0).getComponentCount(); j++) {
-            if (!table.hiddenCols.contains(new Integer(j))) {
+            if (!table.hiddenCols.contains(j)) {
               row.createCell((short) i).setCellValue(
                   (table.getRow(k)).getText(j));
               i++;
@@ -157,7 +161,7 @@ public class TableListener implements MouseListener, ActionListener {
           fileOut.close();
 
         } catch (Exception e) {
-          e.printStackTrace();
+          LOG.log(Level.SEVERE, e.getMessage());
         }
       }
 
